[project]
name = "learn-lang-graph"
version = "0.1.0"
description = "This is repo to learn Lang graph using academy course"
authors = [
    {name = "Varun"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.2.74,<0.3.0)",
    "langgraph-sdk (>=0.1.53,<0.2.0)",
    "langgraph-checkpoint-sqlite (>=2.0.5,<3.0.0)",
    "langsmith (>=0.3.10,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-core (>=0.3.37,<0.4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "tavily-python (>=0.5.1,<0.6.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "trustcall (>=0.0.37,<0.0.38)",
    "langgraph-cli (>=0.1.73,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
